k8s/base/api-gateway/kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: kong
  ports:
  - name: main-port
    protocol: TCP
    port: 80
    targetPort: 8000
